# param-tlc

./: .gitmodules  LICENSE  cabal.project  param-tlc.cabal  test.term  test2.term
main/: Main.hs
src/TLC/: AST.hs  Eval.hs  SimpleTerm.hs  TypeCheck.hs
