Name:	         param-tlc
Version:    	 0.1
Author:     	 Rob Dockins <robdockins@fastmail.fm>
Copyright:  	 (c) Rob Dockins, 2017
License:    	 BSD3
Build-type: 	 Simple
Cabal-version:	 >= 1.10
Synopsis:	 Demonstration project for parameterized-utils

library
  build-depends:
    base >= 4.9,
    containers,
    lens,
    mtl,
    parameterized-utils >= 0.1.12

  exposed-modules:
    TLC.AST
    TLC.Eval
    TLC.TypeCheck

  default-language: Haskell2010

  hs-source-dirs: src


executable demo-tlc
  main-is: main/Main.hs

  build-depends:
    base >= 4.9,
    mtl,
    param-tlc,
    parameterized-utils